<resources>
    <string name="app_name">Tourst</string>
    <string name="facebook_app_id">143461982744384</string>
    <string name="fb_login_protocol_scheme">fb143461982744384</string>
    <string name="san_francisco">San Francisco</string>
    <string name="submit_new_request">Submit New Request</string>
    <string name="make_a_new_request">Make a new request</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="to">to</string>
    <string name="group_size">Group Size</string>
    <string name="enter_group_size">Enter group size</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="guide">Guide</string>
    <string name="suggestions_improvements">Suggestions, improvements?</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="rate_your_experience">Rate your experience!</string>
    <string name="overall">Overall</string>
    <string name="your_request">Your Request</string>
    <string name="edit">Edit</string>
    <string name="view_accepted_requests">View Accepted Requests</string>
    <string name="request">request</string>
    <string name="description">Description:</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="applogo">AppLogo</string>
    <string name="guideProfile">GUIDE PROFILE</string>
</resources>
