<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Travelers.TravelerRating">

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbOverall"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/tvRate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_your_experience"
        android:id="@+id/tvRate"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overall"
        android:id="@+id/tvOverallRating"
        android:textSize="20sp"
        android:paddingBottom="15dp"
        android:layout_alignBottom="@+id/rbOverall"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide"
        android:id="@+id/tvGuideRating"
        android:textSize="20sp"
        android:paddingBottom="15dp"
        android:layout_below="@+id/tvOverallRating"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbGuide"
        android:layout_alignBottom="@+id/tvGuideRating"
        android:layout_alignRight="@+id/rbOverall"
        android:layout_alignEnd="@+id/rbOverall" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etComments"
        android:layout_below="@+id/rbGuide"
        android:layout_alignLeft="@+id/rbGuide"
        android:layout_alignStart="@+id/rbGuide"
        android:layout_marginTop="19dp"
        android:layout_alignRight="@+id/rbGuide"
        android:layout_alignEnd="@+id/rbGuide"
        android:hint="@string/suggestions_improvements"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:id="@+id/tvComments"
        android:textSize="20sp"
        android:paddingBottom="7dp"
        android:layout_alignBottom="@+id/etComments"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSubmitRating"
        android:onClick="onSubmitRating"
        android:layout_marginTop="39dp"
        android:textSize="16sp"
        android:padding="22dp"
        android:layout_below="@+id/tvComments"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
