<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ekok.fbutourguideapp.Travelers.TravelerViewTripInfo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPlaceRequest"
        tools:text="San Francisco"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:layout_alignTop="@+id/tvPlace"
        android:layout_alignLeft="@+id/tvMakeRequest"
        android:layout_alignStart="@+id/tvMakeRequest" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/btnEditRequest"
        android:onClick="editRequest"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/tvLanguagesRequest"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_request"
        android:id="@+id/tvMakeRequest"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:id="@+id/tvPlace"
        android:textSize="16sp"
        android:layout_marginTop="44dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/tvMakeRequest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/tvDate"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/tvPlaceRequest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/tvStartDateRequest"
        android:textSize="16sp"
        tools:text="Start"
        android:layout_alignBottom="@+id/tvDate"
        android:layout_alignLeft="@+id/tvPlaceRequest"
        android:layout_alignStart="@+id/tvPlaceRequest"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/tvEndDateRequest"
        android:textSize="16sp"
        tools:text="End"
        android:paddingBottom="10dp"
        android:layout_alignTop="@+id/tvTo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:id="@+id/tvTo"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:layout_alignTop="@+id/tvStartDateRequest"
        android:layout_alignRight="@+id/btnEditRequest"
        android:layout_alignEnd="@+id/btnEditRequest" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_size"
        android:id="@+id/tvGroupSize"
        android:textSize="15sp"
        android:layout_marginTop="28dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/tvStartDateRequest"
        android:layout_alignLeft="@+id/tvDate"
        android:layout_alignStart="@+id/tvDate"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/tvGroupSizeRequest"
        android:layout_alignBottom="@+id/tvGroupSize"
        android:layout_alignLeft="@+id/tvStartDateRequest"
        android:layout_alignStart="@+id/tvStartDateRequest"
        android:textSize="16sp"
        tools:text="Group Size"
        android:layout_alignRight="@+id/tvEndDateRequest"
        android:layout_alignEnd="@+id/tvEndDateRequest"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:id="@+id/tvTravelerLanguages"
        android:textSize="15sp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/tvGroupSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLanguagesRequest"
        tools:text="English"
        android:textSize="16sp"
        android:layout_alignBottom="@+id/tvTravelerLanguages"
        android:layout_alignLeft="@+id/tvGroupSizeRequest"
        android:layout_alignStart="@+id/tvGroupSizeRequest"
        android:layout_alignRight="@+id/tvGroupSizeRequest"
        android:layout_alignEnd="@+id/tvGroupSizeRequest"
        android:paddingBottom="10dp" />

</RelativeLayout>
