<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REQUEST DETAILS"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="left"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.v7.widget.Toolbar>

    <ImageButton
        android:layout_width="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_exit"
        android:onClick="exit"
        android:id="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:id="@+id/tvPlace"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_below="@+id/toolbar"
        android:layout_alignLeft="@+id/tvGroupSize"
        android:layout_alignStart="@+id/tvGroupSize"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/tvDate"
        android:textSize="16sp"
        android:layout_marginTop="37dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/tvPlace"
        android:layout_alignLeft="@+id/tvPlace"
        android:layout_alignStart="@+id/tvPlace"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_size"
        android:id="@+id/tvGroupSize"
        android:textSize="15sp"
        android:layout_marginTop="35dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/tvDate"
        android:layout_alignLeft="@+id/tvGuideLanguages"
        android:layout_alignStart="@+id/tvGuideLanguages"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:id="@+id/tvGuideLanguages"
        android:textSize="15sp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:textStyle="bold"
        android:layout_below="@+id/tvGroupSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="reqPlace"
        android:id="@+id/tvReqPlace"
        android:layout_alignTop="@+id/tvPlace"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="reqDate"
        android:id="@+id/tvReqDate"
        android:layout_alignTop="@+id/tvDate"
        android:layout_alignLeft="@+id/tvReqPlace"
        android:layout_alignStart="@+id/tvReqPlace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="reqGroupNum"
        android:id="@+id/tvReqGroupNum"
        android:layout_alignTop="@+id/tvGroupSize"
        android:layout_alignLeft="@+id/tvReqDate"
        android:layout_alignStart="@+id/tvReqDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="reqLanguages"
        android:id="@+id/tvReqLanguages"
        android:layout_alignTop="@+id/tvGuideLanguages"
        android:layout_alignLeft="@+id/tvReqGroupNum"
        android:layout_alignStart="@+id/tvReqGroupNum" />


</RelativeLayout>