<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="370dp"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.ekok.fbutourguideapp.Travelers.TravelerViewGuideProfile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REQUEST DETAILS"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:id="@+id/tvPlace"
        android:textColor="@color/TextPrimary"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignLeft="@+id/tvGuideLanguages"
        android:layout_alignStart="@+id/tvGuideLanguages"
        android:layout_marginTop="24dp"
        android:textStyle="bold" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_exit"
        android:onClick="exit"
        android:id="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/TextPrimary"
        android:id="@+id/tvDate"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/tvReqDate"
        android:layout_alignLeft="@+id/tvPlace"
        android:layout_alignStart="@+id/tvPlace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_size"
        android:id="@+id/tvGroupSize"
        android:textColor="@color/TextPrimary"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/tvDate"
        android:layout_alignStart="@+id/tvDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:id="@+id/tvGuideLanguages"
        android:textColor="@color/TextPrimary"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/tvGroupSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="reqPlace"
        android:id="@+id/tvReqPlace"
        android:textSize="18sp"
        android:layout_alignTop="@+id/tvPlace"
        android:layout_toRightOf="@+id/btnDecline"
        android:layout_toEndOf="@+id/btnDecline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="reqDate"
        android:id="@+id/tvReqDate"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/tvPlace"
        android:layout_alignLeft="@+id/tvReqPlace"
        android:layout_alignStart="@+id/tvReqPlace"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="reqGroupNum"
        android:id="@+id/tvReqGroupNum"
        android:layout_alignTop="@+id/tvGroupSize"
        android:layout_alignLeft="@+id/tvReqDate"
        android:layout_alignStart="@+id/tvReqDate"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="reqLanguages"
        android:id="@+id/tvReqLanguages"
        android:layout_alignTop="@+id/tvGuideLanguages"
        android:layout_alignLeft="@+id/tvReqGroupNum"
        android:layout_alignStart="@+id/tvReqGroupNum"
        android:textSize="18sp" />


    <ImageButton
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:id="@+id/btnAccept"
        android:background="@drawable/accept"
        android:layout_marginLeft="20dp"
        android:onClick="acceptRequest"
        android:layout_marginBottom="38dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnDecline"
        android:layout_toEndOf="@+id/btnDecline" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:id="@+id/btnDecline"
        android:onClick="declineRequest"
        android:background="@drawable/decline"
        android:layout_alignTop="@+id/btnAccept"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp" />

</RelativeLayout>