<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ekok.fbutourguideapp.Travelers.TravelerDecide">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/ivProfilePicture"
        android:src="@drawable/profile"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingRight="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Guide Name"
        android:id="@+id/tvGuideName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfilePicture"
        android:layout_toEndOf="@+id/ivProfilePicture"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Location"
        android:id="@+id/tvGuideLocation"
        android:layout_below="@+id/tvGuideName"
        android:layout_toRightOf="@+id/ivProfilePicture"
        android:layout_toEndOf="@+id/ivProfilePicture"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Languages"
        android:id="@+id/tvGuideLanguages"
        android:layout_below="@+id/tvGuideLocation"
        android:layout_toRightOf="@+id/ivProfilePicture"
        android:layout_toEndOf="@+id/ivProfilePicture"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:id="@+id/btnMakeRequest"
        android:layout_marginBottom="37dp"
        android:onClick="TravelerAccept"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/tvHourly"
        android:layout_alignStart="@+id/tvHourly" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline"
        android:id="@+id/btnEditProfile"
        android:onClick="TravelerDecline"
        android:layout_alignTop="@+id/btnMakeRequest"
        android:layout_toRightOf="@+id/tvContact"
        android:layout_toEndOf="@+id/tvContact" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/tvDescription"
        android:textSize="20sp"
        android:layout_below="@+id/ivProfilePicture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Empty"
        android:id="@+id/tvFillDescription"
        android:layout_below="@+id/tvDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Phone 1"
        android:id="@+id/tvPhone1"
        android:textSize="15sp"
        android:layout_above="@+id/tvPhone2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Phone 2"
        android:id="@+id/tvPhone2"
        android:textSize="15sp"
        android:layout_above="@+id/tvGuideEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact:"
        android:id="@+id/tvContact"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:layout_above="@+id/tvPhone1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Email"
        android:id="@+id/tvGuideEmail"
        android:textSize="15sp"
        android:layout_above="@+id/btnEditProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Payment:"
        android:id="@+id/tvPayment"
        android:textSize="20sp"
        android:layout_above="@+id/tvPhone1"
        android:layout_alignLeft="@+id/tvGuideLanguages"
        android:layout_alignStart="@+id/tvGuideLanguages" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Method"
        android:id="@+id/tvMethod"
        android:textSize="15sp"
        android:layout_below="@+id/tvHourly"
        android:layout_alignLeft="@+id/tvPayment"
        android:layout_alignStart="@+id/tvPayment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Hourly"
        android:id="@+id/tvHourly"
        android:textSize="15sp"
        android:layout_above="@+id/tvPhone2"
        android:layout_alignLeft="@+id/tvPayment"
        android:layout_alignStart="@+id/tvPayment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Currency"
        android:id="@+id/tvCurrency"
        android:layout_below="@+id/tvMethod"
        android:layout_alignLeft="@+id/tvMethod"
        android:layout_alignStart="@+id/tvMethod"
        android:textSize="15sp" />

</RelativeLayout>
